--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -15,18 +15,18 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v4  # También actualiza checkout a v4
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 0
     
     - name: Configurar Java 21
-      uses: actions/setup-java@v4  # setup-java también a v4
+      uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
     
     - name: Cache Maven dependencies
-      uses: actions/cache@v4  # cache a v4
+      uses: actions/cache@v4
       with:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
@@ -43,6 +43,10 @@ jobs:
           echo "ℹ️ Sin historial previo"
         fi
     
+    # 🔴 SOLUCIÓN: Dar permisos de ejecución al mvnw
+    - name: Dar permisos a mvnw
+      run: chmod +x mvnw
+    
     - name: Ejecutar tests con Allure
       run: |
         ./mvnw clean test \
@@ -54,7 +58,7 @@ jobs:
         mvn allure:report
     
     - name: Publicar en GitHub Pages
-      uses: peaceiris/actions-gh-pages@v4  # actions-gh-pages también a v4
+      uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./target/site/allure-maven-plugin
@@ -63,7 +67,7 @@ jobs:
         keep_files: true
     
     - name: Subir artefacto
-      uses: actions/upload-artifact@v4  
+      uses: actions/upload-artifact@v4
       with:
         name: allure-report-${{ github.run_number }}
         path: ./target/site/allure-maven-plugin
