--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -1,5 +1,12 @@
 name: Tests con Allure
 
+# 🔴 PERMISOS EXPLÍCITOS - ESTO SOLUCIONA EL ERROR 403
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+  pull-requests: write
+
 on:
   push:
     branches: [ main, master ]
@@ -18,6 +25,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
+        token: ${{ secrets.GITHUB_TOKEN }}  # 🔴 Agregar token explícitamente
     
     - name: Configurar Java 21
       uses: actions/setup-java@v4
@@ -34,7 +42,7 @@ jobs:
     
     - name: Descargar reporte anterior (historial)
       run: |
-        git clone --branch gh-pages --single-branch https://github.com/${{ github.repository }} temp-pages || true
+        git clone --branch gh-pages --single-branch https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} temp-pages || true
         if [ -d "temp-pages/${{ github.run_number }}/history" ]; then
           mkdir -p allure-results/history
           cp -r temp-pages/${{ github.run_number }}/history/* allure-results/history/ 2>/dev/null || :
@@ -42,6 +50,7 @@ jobs:
         else
           echo "ℹ️ Sin historial previo"
         fi
+        rm -rf temp-pages || true
     
     - name: Dar permisos a mvnw
       run: chmod +x mvnw
@@ -52,34 +61,30 @@ jobs:
           -Dtest=Runner \
           -Dcucumber.filter.tags="${{ github.event.inputs.tags || '@pruebas1' }}"
     
-    # 🔴 NUEVO: Configurar Allure desde tools/
     - name: Configurar Allure
       run: |
-        # Dar permisos de ejecución a los binarios de Allure
         chmod +x tools/allure/bin/allure
-        chmod +x tools/allure/bin/allure.bat
-        # Agregar al PATH
         echo "$(pwd)/tools/allure/bin" >> $GITHUB_PATH
-        # Verificar
         allure --version || echo "Allure configurado"
     
-    # 🔴 CAMBIO CRÍTICO: Usar el mismo comando que tu batch
     - name: Generar reporte Allure
       run: |
         tools/allure/bin/allure generate allure-results --clean -o allure-report
     
-    # 🔴 CAMBIO IMPORTANTE: Publicar desde allure-report, NO desde target/
+    # 🔴 PUBLICAR EN GITHUB PAGES - AHORA CON PERMISOS
     - name: Publicar en GitHub Pages
       uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./allure-report  # ✅ CAMBIADO
+        publish_dir: ./allure-report
         publish_branch: gh-pages
         destination_dir: ${{ github.run_number }}
         keep_files: true
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com'
     
     - name: Subir artefacto
       uses: actions/upload-artifact@v4
       with:
         name: allure-report-${{ github.run_number }}
-        path: ./allure-report  # ✅ CAMBIADO
+        path: ./allure-report
