--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -1,11 +1,9 @@
 name: Tests con Allure
 
-# 🔴 PERMISOS EXPLÍCITOS - ESTO SOLUCIONA EL ERROR 403
 permissions:
   contents: write
   pages: write
   id-token: write
-  pull-requests: write
 
 on:
   push:
@@ -13,7 +11,7 @@ on:
   workflow_dispatch:
     inputs:
       tags:
-        description: 'Tags de Cucumber (ej: @pruebas1)'
+        description: 'Tags de Cucumber'
         required: false
         default: '@pruebas1'
 
@@ -25,7 +23,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-        token: ${{ secrets.GITHUB_TOKEN }}  # 🔴 Agregar token explícitamente
+        token: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Configurar Java 21
       uses: actions/setup-java@v4
@@ -38,19 +36,6 @@ jobs:
       with:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
-    
-    - name: Descargar reporte anterior (historial)
-      run: |
-        git clone --branch gh-pages --single-branch https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} temp-pages || true
-        if [ -d "temp-pages/${{ github.run_number }}/history" ]; then
-          mkdir -p allure-results/history
-          cp -r temp-pages/${{ github.run_number }}/history/* allure-results/history/ 2>/dev/null || :
-          echo "✅ Historial copiado"
-        else
-          echo "ℹ️ Sin historial previo"
-        fi
-        rm -rf temp-pages || true
     
     - name: Dar permisos a mvnw
       run: chmod +x mvnw
@@ -65,13 +50,26 @@ jobs:
       run: |
         chmod +x tools/allure/bin/allure
         echo "$(pwd)/tools/allure/bin" >> $GITHUB_PATH
-        allure --version || echo "Allure configurado"
     
     - name: Generar reporte Allure
       run: |
         tools/allure/bin/allure generate allure-results --clean -o allure-report
     
-    # 🔴 PUBLICAR EN GITHUB PAGES - AHORA CON PERMISOS
+    # 🔴 VERIFICACIÓN 1: El reporte existe
+    - name: Verificar reporte
+      run: |
+        echo "📁 Contenido de allure-report:"
+        ls -la allure-report/
+        echo ""
+        echo "📄 Verificando index.html:"
+        if [ -f "allure-report/index.html" ]; then
+          echo "✅ index.html ENCONTRADO"
+        else
+          echo "❌ ERROR: index.html NO existe"
+          exit 1
+        fi
+    
+    # 🚀 Publicar en GitHub Pages
     - name: Publicar en GitHub Pages
       uses: peaceiris/actions-gh-pages@v4
       with:
@@ -80,8 +78,17 @@ jobs:
         publish_branch: gh-pages
         destination_dir: ${{ github.run_number }}
         keep_files: true
-        user_name: 'github-actions[bot]'
-        user_email: 'github-actions[bot]@users.noreply.github.com'
+    
+    # 🔴 VERIFICACIÓN 2: La URL
+    - name: Mostrar URL del reporte
+      run: |
+        REPO_NAME="${{ github.event.repository.name }}"
+        OWNER="${{ github.repository_owner }}"
+        RUN_NUM="${{ github.run_number }}"
+        echo "🎯 TU REPORTE ESTARÁ EN:"
+        echo "https://$OWNER.github.io/$REPO_NAME/$RUN_NUM/"
+        echo ""
+        echo "⏳ Espera 2-3 minutos para que GitHub Pages lo active"
     
     - name: Subir artefacto
       uses: actions/upload-artifact@v4
