--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -23,13 +23,20 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-        token: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Configurar Java 21
       uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
+    
+    # 🔴 INSTALAR CHROME
+    - name: Instalar Chrome
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y google-chrome-stable
+        echo "✅ Chrome instalado:"
+        google-chrome --version
     
     - name: Cache Maven dependencies
       uses: actions/cache@v4
@@ -45,6 +52,8 @@ jobs:
         ./mvnw clean test \
           -Dtest=Runner \
           -Dcucumber.filter.tags="${{ github.event.inputs.tags || '@pruebas1' }}"
+      env:
+        CI: true  # 🔴 Variable de entorno para detectar GitHub Actions
     
     - name: Configurar Allure
       run: |
@@ -55,21 +64,11 @@ jobs:
       run: |
         tools/allure/bin/allure generate allure-results --clean -o allure-report
     
-    # 🔴 VERIFICACIÓN 1: El reporte existe
     - name: Verificar reporte
       run: |
-        echo "📁 Contenido de allure-report:"
         ls -la allure-report/
-        echo ""
-        echo "📄 Verificando index.html:"
-        if [ -f "allure-report/index.html" ]; then
-          echo "✅ index.html ENCONTRADO"
-        else
-          echo "❌ ERROR: index.html NO existe"
-          exit 1
-        fi
+        test -f allure-report/index.html && echo "✅ Reporte OK" || echo "❌ Error"
     
-    # 🚀 Publicar en GitHub Pages
     - name: Publicar en GitHub Pages
       uses: peaceiris/actions-gh-pages@v4
       with:
@@ -79,19 +78,7 @@ jobs:
         destination_dir: ${{ github.run_number }}
         keep_files: true
     
-    # 🔴 VERIFICACIÓN 2: La URL
     - name: Mostrar URL del reporte
       run: |
-        REPO_NAME="${{ github.event.repository.name }}"
-        OWNER="${{ github.repository_owner }}"
-        RUN_NUM="${{ github.run_number }}"
-        echo "🎯 TU REPORTE ESTARÁ EN:"
-        echo "https://$OWNER.github.io/$REPO_NAME/$RUN_NUM/"
-        echo ""
-        echo "⏳ Espera 2-3 minutos para que GitHub Pages lo active"
-    
-    - name: Subir artefacto
-      uses: actions/upload-artifact@v4
-      with:
-        name: allure-report-${{ github.run_number }}
-        path: ./allure-report
+        echo "🎯 Reporte disponible en:"
+        echo "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/${{ github.run_number }}/"
