--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -1,4 +1,4 @@
-name: Tests con Allure
+name: Tests con Allure y Reportes
 
 permissions:
   contents: write
@@ -30,19 +30,29 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
     
-    # 🔴 INSTALAR CHROME
     - name: Instalar Chrome
       run: |
         sudo apt-get update
+        sudo apt-get install -y wget gnupg
+        wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+        sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
+        sudo apt-get update
         sudo apt-get install -y google-chrome-stable
-        echo "✅ Chrome instalado:"
-        google-chrome --version
     
-    - name: Cache Maven dependencies
-      uses: actions/cache@v4
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+    # 🔴 SOLO ESTO NECESITAS PARA EL HISTORIAL
+    - name: Obtener historial de ejecuciones anteriores
+      run: |
+        git clone --branch gh-pages --single-branch https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} temp-pages || true
+        if [ -d "temp-pages" ]; then
+          # Buscar la última ejecución
+          LAST_RUN=$(ls -1 temp-pages/ | grep -E '^[0-9]+$' | sort -n | tail -1)
+          if [ ! -z "$LAST_RUN" ] && [ -d "temp-pages/$LAST_RUN/history" ]; then
+            mkdir -p allure-results/history
+            cp -r temp-pages/$LAST_RUN/history/* allure-results/history/ 2>/dev/null || :
+            echo "✅ Historial copiado de ejecución #$LAST_RUN"
+          fi
+          rm -rf temp-pages
+        fi
     
     - name: Dar permisos a mvnw
       run: chmod +x mvnw
@@ -53,7 +63,7 @@ jobs:
           -Dtest=Runner \
           -Dcucumber.filter.tags="${{ github.event.inputs.tags || '@pruebas1' }}"
       env:
-        CI: true  # 🔴 Variable de entorno para detectar GitHub Actions
+        CI: true
     
     - name: Configurar Allure
       run: |
@@ -63,11 +73,6 @@ jobs:
     - name: Generar reporte Allure
       run: |
         tools/allure/bin/allure generate allure-results --clean -o allure-report
-    
-    - name: Verificar reporte
-      run: |
-        ls -la allure-report/
-        test -f allure-report/index.html && echo "✅ Reporte OK" || echo "❌ Error"
     
     - name: Publicar en GitHub Pages
       uses: peaceiris/actions-gh-pages@v4
@@ -80,5 +85,7 @@ jobs:
     
     - name: Mostrar URL del reporte
       run: |
-        echo "🎯 Reporte disponible en:"
+        echo "========================================="
+        echo "🎯 URL DE TU REPORTE:"
         echo "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/${{ github.run_number }}/"
+        echo "========================================="
